Fix left aligned header container

--- a/css/header.css
+++ b/css/header.css
@@ -103,7 +103,7 @@ header {
 header .container {
     padding-top: 10px;
     padding-bottom: 5px;
-    margin: 10px 0;
+    margin: 10px auto;
 }
 
 header img {
